[gd_scene load_steps=10 format=2]

[ext_resource path="res://weapons/fusion_bolt.gd" type="Script" id=1]

[sub_resource type="SpatialMaterial" id=1]
roughness = 0.0
emission_enabled = true
emission = Color( 0, 0.484375, 1, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="SphereMesh" id=2]
material = SubResource( 1 )
radius = 0.5
height = 1.0

[sub_resource type="SphereShape" id=3]
radius = 0.4

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 0 ), 0.0, 2.16567, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
trail_divisor = 3
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1.0
initial_velocity_random = 1.0
angular_velocity = 86.0
radial_accel = 3.0
scale_curve = SubResource( 5 )

[sub_resource type="SpatialMaterial" id=7]
roughness = 0.0
emission_enabled = true
emission = Color( 0.292969, 0.68515, 1, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="SphereMesh" id=8]
material = SubResource( 7 )
radius = 0.2
height = 0.4
radial_segments = 4
rings = 4

[node name="fusion_bolt" type="RigidBody"]
gravity_scale = 0.0
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.572174, 0, 0, 0, 0.572174, 0, 0, 0, 0.572174, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="Area" type="Area" parent="."]
transform = Transform( 0.596767, 0, 0, 0, 0.596767, 0, 0, 0, 0.596767, 0, 0, 0 )
input_ray_pickable = false

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 3 )

[node name="OmniLight" type="OmniLight" parent="."]
light_color = Color( 0.819892, 0.974672, 1, 1 )

[node name="Particles" type="Particles" parent="."]
amount = 10
lifetime = 0.3
speed_scale = 0.5
explosiveness = 0.21
randomness = 0.69
visibility_aabb = AABB( -4, -4, -5.13486, 8, 8, 10.2697 )
local_coords = false
process_material = SubResource( 6 )
draw_pass_1 = SubResource( 8 )

[node name="RayCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.160702, 0, -0.00068295 )
enabled = true
cast_to = Vector3( 0.5, 0, 0 )

[node name="RayCast2" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00652197, 0, -0.242594 )
enabled = true
cast_to = Vector3( 0, 0, 0.5 )

[node name="RayCast3" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.278525, 0 )
enabled = true
cast_to = Vector3( 0, 0.5, 0 )
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
